--- a/2_Text_Processing_Logistic_Regression_and_Boosting.ipynb
+++ b/2_Text_Processing_Logistic_Regression_and_Boosting.ipynb
@@ -243,7 +243,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "983bfdac-6b71-443e-e80e-f64fa8787a31"
+        "outputId": "983bfdac-6b71-443e-e80e-f64fa8787a31",
+        "collapsed": true
       },
       "outputs": [
         {
